...

        <View style="@style/horizontal_line" />

        <TextView
            style="@style/title"
            android:id="@+id/seminar_cardview_title"
            tools:text="Teste" />
    </LinearLayout>

</android.support.v7.widget.CardView>

